Wed May  2 20:36:38 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_real_insert_text): Reduce
	new_text_length appropriately when we run into the 
	size limit for the entry. (#53445, reported by Jeff Franks)

	* tests/testgtk.c (create_entry): Remove most of the
	property toggle buttons. Replace with a "Props" button
	that brings up a property editor.

	* tests/prop-editor.[ch] test/testtreeview.c tests/Makefile.am:
	Split the property editor code out for reuse, improve.

Wed May  2 17:26:22 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c gdk/x11/gdkwindow-x11.c: Always
	trap errors around calls to XSetInputFocus since we have
	no way of knowing reliably whether we are viewable or
	not. (#53947)

Tue May  1 09:21:23 2001  Jonathan Blandford  <jrb@webwynk.net>

	* gtk/gtktreeview.c (gtk_tree_view_button_release_drag_column):
	fix bug in dropping columns.  Moving columns now basically works
	modula some fine tuning.

Tue May  1 19:09:21 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_horizontal_autoscroll): Add
	autoscroll support.  It mostly works, but could use some fine
	tuning.
	* gtk/gtktreeview.c (gtk_tree_view_button_release_drag_column):
	Actually move the column.

Mon Apr 30 20:29:27 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkbutton.c gtk/gtkcheckbutton.c gtk/gtkoptionmenu.c 
	  gtk/gtkspinbutton.c gtk/gtkstyle.c gtk/gtkwidget.c:
  	  New default theme! A slighly improved version of the 2.0 Raleigh
	  theme, with Windows-esque focus/drawing default. 
	  (GtkWidget::interior_focus defaults to TRUE.)

	* gtk/gtkstyle.[ch]: Add a text_aa color halfway between text and base.

2001-04-30  Havoc Pennington  <hp@pobox.com>

	* tests/testtext.c (line_numbers_expose): fix to work with
	gtk_paint_layout change

Mon Apr 30 19:18:07 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkstyle.[ch] gtk/gtkaccellabel.c gtk/gtkcellrenderertext.c